fix #yahia canvas on small screens

--- a/application/stylus/molecules/canvas.styl
+++ b/application/stylus/molecules/canvas.styl
@@ -1,2 +1,6 @@
 canvas
   makeAbsolute: 0 0 0 0
+
+@media (max-width: gamma - 1)
+  #yahia
+    display: none
